; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_sharpness-filter.c_sharpness_update.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_sharpness-filter.c_sharpness_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sharpness_data = type { float }

@.str = private unnamed_addr constant [10 x i8] c"sharpness\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @sharpness_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sharpness_update(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sharpness_data*, align 8
  %6 = alloca double, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.sharpness_data*
  store %struct.sharpness_data* %8, %struct.sharpness_data** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call double @obs_data_get_double(i32* %9, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  store double %10, double* %6, align 8
  %11 = load double, double* %6, align 8
  %12 = fptrunc double %11 to float
  %13 = load %struct.sharpness_data*, %struct.sharpness_data** %5, align 8
  %14 = getelementptr inbounds %struct.sharpness_data, %struct.sharpness_data* %13, i32 0, i32 0
  store float %12, float* %14, align 4
  ret void
}

declare dso_local double @obs_data_get_double(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
